<resources>
    <string name="dynamic_links_page" translatable="false">ianconnections.page.link</string>
    <string name="sharing_app_social_media_description">Hola! te invito a que seas parte de mi Red de Seguridad y Contencion.</string>
    <string name="app_name">IAN</string>
    <string name="app_long_title" translatable="false">IAN - Instant Alerts Network</string>
    <string name="open">Abrir</string>
    <string name="follow">Seguir</string>
    <string name="go">Ir</string>
    <string name="delete">Borrar</string>
    <string name="none">Ninguno</string>
    <string name="empty">Vacio</string>
    <string name="go_back">Volver</string>
    <string name="skip">Saltar</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="close">Cerrar</string>
    <string name="accept">Aceptar</string>
    <string name="post">Publicar</string>
    <string name="invite_friends">Invitar Amigos</string>
    <string name="warning">Atención!!</string>
    <string name="no_results">No Results</string>
    <string name="search_box_minimum_lenght">Mínimo %1$s carácteres. Faltan %2$s</string>
    <string name="error_signin_by_email_link_invalid_link">El Link utilizado ha expirado.</string>
    <string name="confirm_title">Confirmar</string>
    <string name="confirm_forget">El dispositivo se olvidará, ¿estás seguro? Sin embargo, podrá volver a conectar este dispositivo y recordarlo en cualquier momento.\n\n¿Olvidar?</string>
    <string name="clear">Clear</string>
    <string name="all">Todos</string>
    <string name="to_me">A Mi</string>
    <string name="invite">Invitar</string>
    <string name="enabled">Enabled</string>
    <string name="choose_your">Selecciona tu</string>
    <string name="sos_activation_type">tipo de activación del SOS</string>
    <string name="holding">Presionando</string>
    <string name="tapping">Pulsando</string>
    <string name="set_holding_time">Establece los segundos que deberás mantener pulsado el Boton de SOS antes de que se dispare la alerta </string>
    <string name="press_here">Presiona</string>
    <string name="tap_here">Toca</string>
    <string name="reset">Reiniciar</string>
    <string name="save">Guardar</string>
    <string name="gps">GPS</string>
    <string name="authorize">Autorizar</string>
    <string name="not_yet">Aún, No</string>
    <string name="welcome">Bienvenido!</string>
    <string name="got_it">Got It!</string>
    <string name="error">Error!</string>
    <string name="forgot_password">¿Se te olvidó tu contraseña?</string>
    <string name="assist">Asistir</string>
    <string name="ignore">Ignorar</string>
    <string name="confirmation">Confirmar</string>
    <string name="create">Crear</string>
    <string name="messages_header">Mensajes</string>
    <string name="change">Cambiar</string>
    <string name="try_again">Intentar de nuevo</string>
    <string name="deny">Rechazar</string>
    <string name="additional_info">Información Adicional</string>
    <string name="create_group">Crear Grupo</string>
    <string name="create_notification_group">Crear Grupo de Notificaciones</string>
    <string name="group_name">Nombre del Grupo</string>
    <string name="search_your_contact">Busca tus Contactos</string>
    <string name="all_your_contacts">Todos tus Contactos</string>
    <string name="selectAll">Seleccionar Todos</string>
    <string name="where_do_you_go">A donde te diriges?</string>
    <string name="address_to_delibery">Lugar del Suceso</string>
    <string name="did_you_arrive_dialog_title">Llegaste?</string>
    <string name="did_you_arrive_dialog_message">¿Has llegado a tu destino y estás a salvo?</string>
    <string name="what_are_you_going_in">En que estas yendo?</string>
    <string name="hint_floor_apt">Piso / Departamento</string>
    <string name="where_should_my_friends_ask_for_help_to_go">A donde deben mis amigos solicitar que vaya la ayuda?</string>
    <string name="error_telephone_verification_code_invalid">El Código de Validación es inválido.</string>
    <string name="error_user_does_not_exists">El usuario no existe. Controla los datos ingresados y vuelve a intentarlo</string>
    <string name="verification_mail_sent">Correo Enviado</string>
    <string name="verification_mail_sent_description">Te enviamos un Mensaje a la Casilla de Correo indicada para que verifiques tu Registración</string>
    <string name="error_signup_email_already_in_use">La dirección de correo electronico que ingresaste ya esta en uso</string>
    <string name="error_auth_provider_not_allowed">"Proveedor de Autenticación no habilitado "</string>
    <string name="error_too_many_requests">Hemos bloqueado todas las solicitudes de este dispositivo debido a una actividad inusual. Vuelve a intentarlo más tarde.</string>
    <string name="error_domain_not_authorized">Dominio no autorizado</string>
    <string name="please_wait">Por favor aguarde...</string>
    <string name="what_is_your_situation">Cual es tu situación</string>
    <string name="with_the_event">respecto al evento?</string>
    <string name="it_happens_in_a">Sucede en un</string>
    <string name="fixed_place">Lugar Fijo</string>
    <string name="it_happens_to">Me sucede</string>
    <string name="you_can_go_to_the_event_or_still_navigating">Puedes dirigirte al Evento o seguir navegando por IAN</string>
    <string name="done_exclamation">Listo!</string>
    <string name="enable">Activar</string>
    <string name="go_to_event">Ir al Evento</string>
    <string name="profile_in_setup">Perfil</string>
    <string name="complete_your_in_setup">Completa tu</string>
    <string name="first_name">Nombre</string>
    <string name="hint_first_name">Juan</string>
    <string name="last_name">Apellido</string>
    <string name="hint_last_name">Perez</string>
    <string name="hint_nick_name">Apodo</string>
    <string name="date_of_birth">Fecha de Nacimiento</string>
    <string name="hint_introduce_your_birth_day">Ingresa tu Fecha de Nacimiento</string>
    <string name="save_and_continue">Guardar y Continuar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="not_found">Not Found</string>
    <string name="validation_code">Código de Validación</string>
    <string name="validation_code_rules">El Código de Validación debe ser un código numérico de 4 digitos que dados vuelta no sean iguales.</string>
    <string name="meanwhile_invite_friends">Mientras tanto, aprovecha y amplia tu Red de Seguridad lo más que puedas, invitando a tus amigos a ser parte de IAN</string>
    <string name="next">Siguiente</string>
    <string name="contacts_search">Contact\'s search</string>
    <string name="close_event">Cerrar Evento</string>
    <string name="leave_event">Abandonar</string>
    <string name="eliminate_account">Eliminar Cuenta</string>
    <string name="eliminate_account_message">Estas a punto de eliminar tu Cuenta.\n\nSi haces eso, perderas tu subscripcion y todos los contactos que forman parte de tu Red.\n\nIgual, si mas adelante decides volver, podras volver a re-crear tu Red.\n\nDeseas continuar con la Eliminación?</string>
    <string name="cannot_invite_myself">No podes invitarte a vos mismo</string>
    <string name="user_already_registered">Ya es usuario de IAN</string>
    <string name="friendship_invitation_message_done">Le hemos enviado una notificacion a %1$s para avisarle que queres agregarlo a tu Red de Contactos</string>
    <string name="delete_friendship">Cancelar Amistad</string>
    <string name="delete_friendship_message">Estas seguro que deseas cancelar tu amistad con %1$s</string>
    <string name="cancel_friendship_invitation">Cancelar</string>
    <string name="cancel_friendship_invitation_message">Estas seguro que quieres eliminar tu invitacion de amistad enviada a  %1$s ?</string>
    <string name="do_you_want_to_accept_invitation_from">Quieres aceptar la invitación de %1$s</string>
    <string name="refuse">Rechazar</string>
    <string name="not_in_your_network">Aún no es parte de tu Red</string>
    <string name="waiting_for_acceptance">Pendiente de Aceptación</string>
    <string name="a_user_invites_you_to_be_friends">Te ha invitado a ser parte de su Red de Contactos</string>
    <string name="display_name_requirements">Nickname must be at least 8 characters lenght</string>
    <string name="first_name_requirements">First name must not be empty</string>
    <string name="last_name_requirements">Last name must not be empty</string>
    <string name="security_code_requirements">Security Code must be a  4 digits numerical code that be different if you reverse it</string>
    <string name="cannot_be_determined_if_email_or_phone">It cannot be determined if it is an email or a telephone</string>
    <string name="to_continue_must_complete_data">To continue must complete the following fields</string>
    <string name="email_or_phone_number_empty">Must introduce Email or Phone number</string>
    <string name="password_invalid">Invalid Password</string>
    <string name="security_code_invalid">Your Security Code is Invalid</string>
    <string name="security_code_is_missing">Security Code is Empty</string>
    <string name="being_connected_is_fundamental">Conectados es mejor!</string>
    <string name="ian_is_the_first_social_netword">IAN es la primer red social colaborativa de alertas de seguridad en el mundo.\nTu puedes ser parte de ella facilmente y asi asistir y ser asistido en momentos dificiles.</string>
    <string name="go_home_relaxed">Vuelve a casa más relajado</string>
    <string name="you_can_ask_your_family_and_friends">Puedes pedirle a tus familiares y amigos que monitoreen tu regreso junto con la Inteligencia Artificial de IAN que te cuidará como tu Angel Guardian</string>
    <string name="in_few_touches">"Notificación con pocos toques! "</string>
    <string name="if_you_are_in_problems_let_it_know">Si estas en problemas, hazlo saber en unos pocos toques y tu Red será notificada en el acto.</string>
    <string name="what_are_you_waiting_for">What are you waiting for?</string>
    <string name="time_with_hms">%1$s horas, %2$s minutos y %3$s segundos</string>
    <string name="time_with_hm">%1$s horas y %2$s minutos </string>
    <string name="time_with_ms">%1$s minutos y %2$s segundos</string>
    <string name="time_with_m">%1$s minutos </string>
    <string name="click_to_search">Click to Search</string>
    <string name="clear_all">Clear All</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="signup_with_number">Registrate con tu Teléfono</string>
    <string name="signup_with_email">Registrate con tu Correo</string>
    <string name="signup_with_facebook">Registrate con Facebook</string>
    <string name="signup_with_google">Registrate con Google</string>
    <string name="enter_your">Ingresa tu</string>
    <string name="select_your_in_signup">Elije tu</string>
    <string name="signup_type_in_signup">Tipo de Registro</string>
    <string name="event_close_to_expire_title">Queda poco Tiempo!</string>
    <string name="event_close_to_expire_for_viewer_message">El Evento creado por %1$s será Eliminado dentro de  %2$s por cumplirse su duración standard\nPuedes extender la duracion del evento comprando tiempo extra\nCualquiera de los participantes puede adquirir la extension de tiempo</string>
    <string name="extend">Extender</string>
    <string name="register">Registrarte</string>
    <string name="introduce_your_email">Ingresa tu Email</string>
    <string name="introduce_your_password">Ingresa tu Passsword</string>
    <string name="confirm_your_password">Confirma tu Password</string>
    <string name="are_you_sure_you_want_to_delete_the_group">Estas seguro que quieres eliminar el Grupo?</string>
    <string name="delete_group">Delete Group</string>
</resources>