<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/dialog_background"
android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contacts_search"
            android:textSize="@dimen/text_size_subheading"/>

        <EditText
            android:id="@+id/alertSearchEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"
            android:autofillHints="@string/click_to_search"
            android:hint="@string/click_to_search"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/text_color">

            <requestFocus />
        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            >

            <ListView
                android:id="@+id/alertSearchListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:cacheColorHint="@null"
                android:fadeScrollbars="true"
                android:fastScrollEnabled="true"
                android:textFilterEnabled="true" />

            <TextView
                android:id="@+id/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/not_found"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/red" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_ok"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/ok"/>

            <Button
                android:id="@+id/button_clear_all"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/clear_all"/>

            <Button
                android:id="@+id/button_cancel"
                style="@style/SecondaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>