<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <ImageButton
            android:id="@+id/back_arrows"
            android:layout_width="@dimen/box_normal"
            android:layout_height="@dimen/box_normal"
            android:background="@drawable/circle_primary_color"
            android:src="@drawable/ic_chevron_left"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/stepTitle"
            style="@style/font_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/select_your_in_signup"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_subheading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stepLegend"
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/signup_type_in_signup"
            android:textSize="@dimen/text_size_subheading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepTitle" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rectangle_02"
                    android:layout_marginTop="4dp"

                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/signup_types_image" />
            </LinearLayout>

            <Button
                android:id="@+id/signupWithPhoneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/primary_button_border"
                android:text="@string/signup_with_number"
                android:textAllCaps="false"
                android:textColor="@color/primary_button_text_color" />

            <Button
                android:id="@+id/signupWithEmailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/secondary_button_border"
                android:text="@string/signup_with_email"
                android:textAllCaps="false"
                android:textColor="@color/secondary_button_text_color" />


            <Button
                android:id="@+id/signupWithFacebookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/secondary_button_border"
                android:text="@string/signup_with_facebook"
                android:textAllCaps="false"
                android:textColor="@color/secondary_button_text_color" />


            <Button
                android:id="@+id/signupWithGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/secondary_button_border"
                android:text="@string/signup_with_google"
                android:textAllCaps="false"
                android:textColor="@color/secondary_button_text_color" />

        </LinearLayout>
    </LinearLayout>

</layout>