<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/back_arrows"
            android:layout_width="@dimen/box_normal"
            android:layout_height="@dimen/box_normal"

            android:background="@drawable/circle_primary_color"
            android:src="@drawable/ic_chevron_left"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/stepTitle"
            style="@style/font_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/enter_your"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_subheading"

            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/stepLegend"
            style="@style/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hint_email"
            android:textSize="@dimen/text_size_subheading"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepTitle" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="@dimen/rectangle_02"

                android:layout_marginTop="20dp"

                app:srcCompat="@drawable/sign_up_with_email_image" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location_input_layout"
                    style="@style/MaterialOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_address"
                        style="@style/MaterialTextInputEditText"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:focusable="auto"
                        android:focusableInTouchMode="true"
                        android:inputType="textEmailAddress"
                        android:visibility="visible"
                        android:hint="@string/introduce_your_email"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input_layout"
                    style="@style/MaterialOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/MaterialTextInputEditText"
                        android:layout_width="match_parent"

                        android:layout_height="wrap_content"

                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:inputType="textPassword"
                        android:hint="@string/introduce_your_password"

                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/re_password_input_layout"
                    style="@style/MaterialOutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/hint_confirm_password"
                    app:boxStrokeWidth="2dp"
                    app:hintTextAppearance="@style/CustomTILHint"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        style="@style/MaterialTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:inputType="textPassword"
                        android:hint="@string/confirm_your_password"
                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/signupWithEmailButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_button_border"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_button_text_color" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>




    </LinearLayout>

</layout>