<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="60dp"
            android:background="@drawable/white_popup_bg"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".8">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/event_close_to_expire_title"
                android:textSize="@dimen/text_size_subheading"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/event_close_to_expire_for_viewer_message"
                android:textSize="@dimen/text_size_paragraph" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/extendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/primary_button_border"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:text="@string/extend"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogMessage" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/close_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_secundary_white"
                android:fontFamily="@font/muli_bold"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/darkGray"
                android:textSize="13sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>