<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout11"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="60dp"
            android:background="@drawable/white_popup_bg"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/delete_group"
                android:textSize="@dimen/text_size_heading" />

            <LinearLayout
                android:id="@+id/linearLayout12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_sure_you_want_to_delete_the_group"
                    android:textSize="@dimen/text_size_heading"
                    android:gravity="center_horizontal"
                    android:textStyle="normal"
                    android:layout_marginTop="10dp"/>


                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Grupete Loco"
                    android:textSize="@dimen/text_size_heading"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    />


            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/yes_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/yes"

                android:textColor="@drawable/fg_button_primary" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/no_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_button_secondary"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@drawable/fg_button_secondary" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>